apps/nerdd-frontend/base/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nerdd-frontend
  labels:
    app: nerdd-frontend
spec:
  replicas: 1
  selector:
    matchLabels:
      app: nerdd-frontend
  template:
    metadata:
      labels:
        app: nerdd-frontend
    spec:
      containers:
        - name: nerdd-frontend
          image: ghcr.io/molinfo-vienna/nerdd-frontend:latest
          ports:
            - containerPort: 80
          volumeMounts:
            - name: nginx-main-config-volume
              subPath: nginx.conf
              mountPath: /etc/nginx/conf.d/default.conf
      volumes:
        - name: nginx-main-config-volume
          configMap:
            name: nginx-main-config
        - name: nginx-proxy-config-volume
          configMap:
            name: nginx-proxy-config
