apps/nerdd-frontend/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: nerdd-frontend
  labels:
    app: nerdd-frontend
spec:
  selector:
    app: nerdd-frontend
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
