apps/nerdd-frontend/base/ingress.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: nerdd-frontend-ingressroute
spec:
  entryPoints:
    - web
  routes:
    - match: Host(`dev-nerdd.univie.ac.at`) && PathPrefix(`/`)
      kind: Rule
      services:
        - name: nerdd-frontend
          port: 80
  tls:
    secretName: domain-tls-staging
