apps/nerdd-frontend/base/ingressroute.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: nerdd-frontend-ingressroute-https
  labels:
    app: nerdd-frontend
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`testpi1.local`) && PathPrefix(`/`)
      kind: Rule
      services:
        - name: nerdd-frontend
          port: 80
  tls:
    secretName: testpi1-cert
